simulator/src/test/resources/model_files/errors/duplicate_reaction.mdsl

# A model file that contains two identical reaction lines.
# This should throw an error.

initial tree {simulation}

species a contained simulation = 1 units
species b contained simulation = 1 units

parameter param1 = 1 units

a contained simulation modifier param1 => b contained simulation
a contained simulation modifier param1 => b contained simulation
